# area_from_svo

./: .gitignore  CMakeLists.txt  README.md  batch_run.sh  build.sh  main.cpp  plot_results.py  run.sh  test_results.csv
angle_calculations/: Cargo.toml
angle_calculations/src/: main.rs
process_stereo_image_csvs_rs/: Cargo.toml
process_stereo_image_csvs_rs/binding/: process_stereo_image_csvs_rs.h
process_stereo_image_csvs_rs/src/: clustering.rs  lib.rs  main.rs  tests.rs
read_array/: Cargo.toml
read_array/src/: main.rs
stereo_image_csvs/: placeholder.md
theory/angle_calculations/: Cargo.toml
theory/angle_calculations/src/: main.rs
theory/error_calculations/: Cargo.toml
theory/error_calculations/src/: main.rs
zed_count_frames/: CMakeLists.txt  build.sh  main.cpp
